--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/post-bg-desk.jpg
 email: dark_guan@foxmail.com
 description: "Every failure is leading towards success."
 keyword: "Dark AnanasStepper Ananas Robotic STM32 Linux AI "
-url: "https://dark-guan.github.io/Dark-s-Robotic-Blog/"          # your host, for absolute URL
+url: "https://dark-guan.github.io/Dark-Robotic-Blog/"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/Dark-Guan/Dark-s-Robotic-Blog.git" # you code repository
 
